# RMA-grupo-5

./: .gitignore  README.md  README.txt  package-lock.json  package.json  requirements.txt
Backend/: .env.template  copia  delete_data_db  load_data_db  package-lock.json  package.json  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 02672b265995_nodo_type_tipodato_agregado.py  6ab833ac383d_migracion_inicial.py  e989a2070ab6_update_de_type.py
Backend/src/: __init__.py  conexiones_websocket.py  config_cors.py  config_db.py  constants.py  db_models.py  exceptions.py  main.py  mi-db-sqlite.db  models.py  router.py  schemas.py  services.py
Backend/src/generador/: sub.py
Backend/src/generator-rma/: sub.py
Backend/src/nodo/: constants.py  exceptions.py  models.py  router.py  schemas.py  services.py  utils.py
Backend/src/nodo/auth/: crud.py  hashing.py  jwt.py
Backend/src/publicador/: .gitignore  README.md  main.py  requirements.txt
Backend/src/publicador/Envs/rma-generador/: pyvenv.cfg
Backend/src/publicador/Envs/rma-generador/Scripts/: activate  activate.bat
Backend/src/publicador/mqtt/: __init__.py  pub.py
Backend/src/suscriptor/: __init__.py  config.py  services.py  sub.py
Backend/tests/: database.py
Backend/tutorial-env/: pyvenv.cfg
Envs/rma-generador/: pyvenv.cfg
Frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
Frontend/Documentation/: documentation.html
Frontend/public/: index.html
Frontend/src/: App.css  App.jsx  index.css  index.js  main.jsx  privateRouter.js  (+1 more)
(+55 files in other folders)
