[tool.poetry]
name = "Backend"
version = "0.1.0"
description = "Proyecto base con FastAPI"
authors = ["Grupo 5"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.0"}
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
pytest = "^8.3.2"
httpx = "^0.27.0"
ipdb = "^0.13.13"
alembic = "^1.13.3"
paho-mqtt = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
